# superstring

./: README.md
benchmarks/: gdb.test  test_1000_65000_0.8.test  test_100_6500_0.4.test  test_10_5000_0.8.test  test_200_40000_0.8.test  test_400_40000_0.8.test  test_50_4000_0.8.test  test_50_50000_0.8.test  test_5_5000_0.7.test
prezentacja_polowkowa/: prezentacja.tex  tabelka.txt
prezentacja_polowkowa/Wykresy/: test_10_300.test_0.progress  test_10_300.test_0.progress.gplt  test_20_400.test_0.progress  test_20_400.test_0.progress.gplt  test_30_600.test_0.progress  test_30_600.test_1.progress  test_30_600.test_2.progress  test_30_600.test_OX.progress.gplt  test_30_600.test_PMX.progress.gplt  test_30_600.test_UX.progress.gplt  test_40_800.test_0.progress  test_40_800.test_0.progress.gplt  test_60_3000.test_0.progress  test_60_3000.test_0.progress.gplt
prezentacja_problemu/: prezentacja.tex
program/: CMakeLists.txt  benchmark_generator.cpp  genetic.cpp  heuristic.cpp  random.cpp
program/include/: algorithm_state.h  benchmark_collection.h  crossover.h  find_union.h  heuristic.h  immigration.h  instance.h  local_search.h  solver.h  suffix_tree.h  suffix_tree_imp.h  text.h
program/src/: algorithm_state.cpp  benchmark_collection.cpp  find_union.cpp  heuristic.cpp  immigration.cpp  individual.cpp  instance.cpp  local_search.cpp  node.cpp  ox.cpp  solver.cpp  tree.cpp
program/test/: benchmark_collection.cpp  find_union.cpp  individual.cpp  instance.cpp  local_search.cpp  text.cpp  tree_test.cpp
raport/: dystrybuanta_bez_logarytmicznej.eps  dystrybuanta_logarytmiczna.eps  raport.tex  stary_raport.tex  tabelki.tex  wykres_400.eps  wykres_600.eps  wykres_diversity_600.eps
